Updating the -webkit-background-blend-mode property dynamically does not trigger a redraw of the element.

Source/WebCore:

Adding krit's fix: actual blending values should be compared, not the sets.
https://bugs.webkit.org/show_bug.cgi?id=117223

Patch by Mihai Tica <mitica@adobe.com> on 2013-06-13
Reviewed by Dirk Schulze.

Test: css3/compositing/background-blend-mode-image-color-dynamic.html

* rendering/style/FillLayer.cpp:
(WebCore::FillLayer::operator==):

LayoutTests:

Adding test that sets background blend modes from script, after the page is loaded.
https://bugs.webkit.org/show_bug.cgi?id=117223

Patch by Mihai Tica <mitica@adobe.com> on 2013-06-13
Reviewed by Dirk Schulze.

* fast/repaint/background-blend-mode-image-color-dynamic-expected.html: Added.
* fast/repaint/background-blend-mode-image-color-dynamic.html: Added.

Canonical link: https://commits.webkit.org/135769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151565 268f45cc-cd09-0410-ab3c-d52691b4dbfc